# DocuCraft

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docucraft/: .env.examle  config.py  main.py
docucraft/src/: __init__.py  colored_logs.py  custom_types.py  data_loader.py  docx_creater.py  jinja_env.py  log_settings.yaml  utils.py
tests/: conftest.py  test_docx_creater.py
tests/templates/: dummy_doc.docx  dummy_doc_result.docx  dummy_excel.xlsx
